Harmonizacao layout telas cadastro fornecedores,produtos, laboratorio

--- a/frontend/src/main/webapp/index.html
+++ b/frontend/src/main/webapp/index.html
@@ -194,31 +194,37 @@
           </div>
         </li>
 
-        <li class="nav-item mt-2">
+        <!-- Menu Laboratório -->
+        <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
             data-bs-target="#menu-laboratorio">Laboratório</a>
           <div class="collapse" id="menu-laboratorio">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" role="button">Cadastrar Resultados</a>
+                <a class="nav-link" role="button"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_laboratorio.html')">Cadastrar Resultados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" role="button">Relatórios</a>
+                <a class="nav-link" role="button"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_consulta_laboratorio.html')">Consultar Resultados</a>
               </li>
             </ul>
           </div>
         </li>
 
-        <li class="nav-item mt-2">
+        <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" role="button" aria-expanded="false"
             data-bs-target="#menu-engenharia">Engenharia</a>
           <div class="collapse" id="menu-engenharia">
             <ul class="nav flex-column ms-3">
               <li class="nav-item">
-                <a class="nav-link" role="button">Cadastrar Parecer</a>
+                <a class="nav-link" role="button"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_cadastro_parecer_engenharia.html')">Cadastrar
+                  Parecer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" role="button">Relatórios</a>
+                <a class="nav-link" role="button"
+                  onclick="FiberGuardian.Core.carregarPagina('tela_teste_reprovados.html')">Relatórios</a>
               </li>
             </ul>
           </div>
