--- a/frontend/src/main/webapp/tela_cadastro_fornecedor.html
+++ b/frontend/src/main/webapp/tela_cadastro_fornecedor.html
@@ -20,7 +20,7 @@
         <!-- Seção: Cadastro de Fornecedor -->
         <section class="card mb-4">
             <h4 class="mb-2 mt-2 text-center titulo-cad-recebimento">CADASTRO DE FORNECEDOR</h4>
-            <div class="card-header">Dados do Fornecedor</div>
+            <div class="card-header branco-bold">Dados do Fornecedor</div>
             <div class="card-body">
                 <form id="formFornecedor" name="formFornecedor" novalidate>
                     <div class="row">
