--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -21,7 +21,7 @@
     <!-- Etapa 1: Dados da Nota Fiscal -->
     <section class="card mb-4">
       <h4 class="mb-2 mt-2 text-center titulo-cad-recebimento">CADASTRO DE NOTA FISCAL</h4>
-      <div class="card-header">1. Dados da Nota Fiscal</div>
+      <div class="card-header branco-bold">1. Dados da Nota Fiscal</div>
       <div class="card-body">
         <div class="row">
           <div class="col-md-4 mb-3">
@@ -109,7 +109,7 @@
 
     <!-- Etapa 2: Itens da Nota Fiscal -->
     <section class="card">
-      <div class="card-header">2. Itens da Nota Fiscal</div>
+      <div class="card-header branco-bold">2. Itens da Nota Fiscal</div>
       <div class="card-body">
         <form id="formItemNota" name="formItemNota" novalidate>
 
