--- a/frontend/src/main/webapp/tela_consulta_recebimento.html
+++ b/frontend/src/main/webapp/tela_consulta_recebimento.html
@@ -23,7 +23,7 @@
 
     <section class="card mb-4">
       <h4 class="mb-2 mt-2 text-center titulo-pesquisa">PESQUISA DE NOTAS FISCAIS</h4>
-      <div class="card-header">
+      <div class="card-header branco-bold">
         <i class="fas fa-search me-2"></i>Filtros de Pesquisa
       </div>
       <div class="card-body">
