--- a/frontend/src/main/webapp/tela_cadastro_laboratorio.html
+++ b/frontend/src/main/webapp/tela_cadastro_laboratorio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,61 +10,61 @@
   <link rel="stylesheet" href="assets/css/tela_cadastro_laboratorio.css">
   <link rel="stylesheet" href="assets/css/dropdown_generico.css">
 </head>
+
 <body>
   <div class="container mt-2 mb-2">
-    <h2 class="mb-2 text-center header-spacing">Cadastro Laboratório</h2>
     <div id="alert-container"></div>
     <form id="laboratorioForm">
       <div class="card-custom mb-3">
-        <div class="card-header">Dados do Teste</div>
+        <h2 class="mb-2 text-center header-spacing titulo-cad-lab">CADASTRO LABORATÓRIO</h2>
+        <div class="card-header">1. Dados do Teste</div>
         <div class="row mt-2">
-          
-          <!-- Fornecedor -->
+
           <div class="col-md-6 mb-2">
             <label class="form-label">Fornecedor</label>
             <div class="input-group">
-                <input type="text" class="form-control" id="fornecedor" autocomplete="off" placeholder="Digite parte do nome do fornecedor" required />
-                <button id="btnBuscarFornecedor" class="btn btn-secondary ms-2" type="button">
-                    <i class="fas fa-search me-2"></i>Buscar
-                </button>
-                <button id="btnTrocarFornecedor" class="btn btn-warning ms-2" type="button" disabled>
-                    <i class="fas fa-exchange-alt me-2"></i>Trocar
-                </button>
+              <input type="text" class="form-control" id="fornecedor" autocomplete="off"
+                placeholder="Digite parte do nome do fornecedor" required />
+              <button id="btnBuscarFornecedor" class="btn btn-secondary ms-2" type="button">
+                <i class="fas fa-search me-2"></i>Buscar
+              </button>
+              <button id="btnTrocarFornecedor" class="btn btn-outline-danger" type="button" disabled>
+                <i class="fas fa-exchange-alt me-2"></i>Trocar
+              </button>
             </div>
             <div id="dropdownFornecedor" class="dropdown-menu w-100" aria-labelledby="fornecedor"></div>
           </div>
 
-          <!-- Nota Fiscal -->
           <div class="col-md-6 mb-2">
             <label class="form-label">Nota Fiscal</label>
             <div class="input-group">
-                <input type="text" class="form-control" id="notaFiscal" autocomplete="off" placeholder="Digite parte do número da nota fiscal" required />
-                <button id="btnBuscarNotaFiscal" class="btn btn-secondary ms-2" type="button">
-                    <i class="fas fa-search me-2"></i>Buscar
-                </button>
-                <button id="btnTrocarNotaFiscal" class="btn btn-warning ms-2" type="button" disabled>
-                    <i class="fas fa-exchange-alt me-2"></i>Trocar
-                </button>
+              <input type="text" class="form-control" id="nrNotaFiscal" autocomplete="off"
+                placeholder="Digite parte do número da nota fiscal" required />
+              <button id="btnBuscarNrNotaFiscal" class="btn btn-secondary ms-2" type="button">
+                <i class="fas fa-search me-2"></i>Buscar
+              </button>
+              <button id="btnTrocarNrNotaFiscal" class="btn btn-outline-danger" type="button" disabled>
+                <i class="fas fa-exchange-alt me-2"></i>Trocar
+              </button>
             </div>
-            <div id="dropdownNotaFiscal" class="dropdown-menu w-100" aria-labelledby="notaFiscal"></div>
+            <div id="dropdownNrNotaFiscal" class="dropdown-menu w-100" aria-labelledby="nrNotaFiscal"></div>
           </div>
 
-          <!-- Código Produto -->
           <div class="col-md-6 mb-2">
             <label class="form-label">Código Produto</label>
             <div class="input-group">
-                <input type="text" class="form-control" id="codigoProduto" autocomplete="off" placeholder="Digite parte do código do produto" required />
-                <button id="btnBuscarCodigoProduto" class="btn btn-secondary ms-2" type="button">
-                    <i class="fas fa-search me-2"></i>Buscar
-                </button>
-                <button id="btnTrocarCodigoProduto" class="btn btn-warning ms-2" type="button" disabled>
-                    <i class="fas fa-exchange-alt me-2"></i>Trocar
-                </button>
+              <input type="text" class="form-control" id="produto" autocomplete="off"
+                placeholder="Digite parte do código do produto" required />
+              <button id="btnBuscarProduto" class="btn btn-secondary ms-2" type="button">
+                <i class="fas fa-search me-2"></i>Buscar
+              </button>
+              <button id="btnTrocarProduto" class="btn btn-outline-danger" type="button" disabled>
+                <i class="fas fa-exchange-alt me-2"></i>Trocar
+              </button>
             </div>
-            <div id="dropdownCodigoProduto" class="dropdown-menu w-100" aria-labelledby="codigoProduto"></div>
+            <div id="dropdownProduto" class="dropdown-menu w-100" aria-labelledby="produto"></div>
           </div>
 
-          <!-- Número Lote (input simples) -->
           <div class="col-md-6 mb-2">
             <label class="form-label">Número Lote</label>
             <input type="text" class="form-control" id="numeroLote" required>
@@ -73,7 +74,7 @@
       </div>
 
       <div class="card-custom mb-3">
-        <div class="card-header">Teste Laboratório</div>
+        <div class="card-header">2. Teste Laboratório</div>
         <div class="row mt-2">
           <div class="col-md-4 mt-2">
             <label class="form-label">CVM (%)</label>
@@ -142,10 +143,44 @@
       </div>
     </form>
   </div>
-      
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../webapp/assets/js/fiberguardian_core.js"></script>
-  <script src="../webapp/assets/js/tela_cadastro_laboratorio.js"></script>
-</body>
-</html>
 
+  <div class="modal fade" id="modalConfirmacaoGenerico" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalConfirmacaoTitulo">Confirmação</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+        <div class="modal-body" id="modalConfirmacaoMensagem">
+        </div>
+        <div class="modal-footer">
+          <button id="btnConfirmacaoSim" type="button" class="btn btn-primary">Sim</button>
+          <button id="btnConfirmacaoNao" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="modalMensagem" tabindex="-1" aria-labelledby="modalMensagemLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalMensagemLabel">Aviso</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p id="modalMensagemTexto"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/fiberguardian_core.js"></script>
+  <script src="assets/js/fiberguardian_utils.js"></script>
+  <script src="assets/js/tela_cadastro_laboratorio.js"></script>
+</body>
+
+</html>
