--- a/frontend/src/main/webapp/tela_consulta_fornecedor.html
+++ b/frontend/src/main/webapp/tela_consulta_fornecedor.html
@@ -21,7 +21,7 @@
         <!-- Seção de Busca de Fornecedor -->
         <section class="card mb-4">
             <h4 class="mb-2 mt-2 text-center titulo-cad-recebimento">CONSULTA DE FORNECEDORES</h4>
-            <div class="card-header">Busca de Fornecedor</div>
+            <div class="card-header branco-bold"><i class="fas fa-search me-2"></i>Busca de Fornecedor</div>
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6 mb-3">
@@ -56,7 +56,7 @@
 
         <!-- Seção de Resultados -->
         <section class="card">
-            <div class="card-header">Detalhes do Fornecedor</div>
+            <div class="card-header branco-bold">Detalhes do Fornecedor</div>
             <div class="card-body">
                 <div id="resultadoConsulta">
                     <div class="row">
