--- a/frontend/src/main/webapp/tela_teste_reprovados.html
+++ b/frontend/src/main/webapp/tela_teste_reprovados.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="assets/css/tela_consulta_laboratorio.css">
 </head>
 <body>
-    <div class="container mt-4">
+    <div class="container mt-4 mb-5">
         <div id="resultadosContainer" class="card-custom">
-            <h2 class="text-center mb-4">Engenharia - Testes Reprovados</h2>
+          
         <div id="alert-container"></div>
+          <h2 class="text-center mb-4">Engenharia - Testes Reprovados</h2>
             <div class="card-header">Testes Reprovados</div>
             <div class="card-body">
                 <table class="table table-striped table-bordered text-center align-middle">
