--- a/frontend/src/main/webapp/tela_cadastro_laboratorio.html
+++ b/frontend/src/main/webapp/tela_cadastro_laboratorio.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro Laboratório</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/tela_cadastro_laboratorio.css">
@@ -54,8 +55,9 @@
                 <i class="fas fa-file-pdf me-1"></i>PDF
               </button>
             </div>
+            <div id="dropdownNrNotaFiscal" class="dropdown-menu w-100" aria-labelledby="nrNotaFiscal"></div>
+
           </div>
-          <div id="dropdownNrNotaFiscal" class="dropdown-menu w-100" aria-labelledby="nrNotaFiscal"></div>
         </div>
         <div class="row mt-2">
 
@@ -82,7 +84,7 @@
           <div class="col-md-5 mb-2">
             <label class="form-label">Liberação por</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="liberacaoPor" name="liberacaoPor" autocomplete="off"
+              <input type="text" class="form-control" id="inputLiberacaoPor" name="inputLiberacaoPor" autocomplete="off"
                 placeholder="Digite parte do nome do responsável" required />
               <button id="btnBuscarLiberacaoPor" class="btn btn-secondary ms-2" type="button">
                 <i class="fas fa-search me-2"></i>Buscar
@@ -95,77 +97,73 @@
           </div>
         </div>
       </div>
+
+      <div class="card-custom mb-3">
+        <div class="card-header">2. Teste Laboratório</div>
+        <div class="row mt-2">
+          <div class="col-md-4 mt-2">
+            <label for="cvm" class="form-label">CVM (%)</label>
+            <input type="number" step="0.01" class="form-control" id="cvm" name="cvm" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="pontosFinos" class="form-label">Pontos Finos</label>
+            <input type="number" class="form-control" id="pontosFinos" name="pontosFinos" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="pontosGrossos" class="form-label">Pontos Grossos</label>
+            <input type="number" class="form-control" id="pontosGrossos" name="pontosGrossos" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="neps" class="form-label">NEPs</label>
+            <input type="number" class="form-control" id="neps" name="neps" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="hPilosidade" class="form-label">H. Pilosidade</label>
+            <input type="number" step="0.01" class="form-control" id="hPilosidade" name="hPilosidade" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="resistencia" class="form-label">Resistência</label>
+            <input type="number" step="0.01" class="form-control" id="resistencia" name="resistencia" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="alongamento" class="form-label">Alongamento</label>
+            <input type="number" step="0.01" class="form-control" id="alongamento" name="alongamento" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="tituloNe" class="form-label">Título, ne</label>
+            <input type="number" step="0.01" class="form-control" id="tituloNe" name="tituloNe" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="torcaoTm" class="form-label">Torção, t.m</label>
+            <input type="number" step="0.01" class="form-control" id="torcaoTm" name="torcaoTm" required>
+          </div>
+          <div class="col-md-4 mt-2">
+            <label for="status" class="form-label">Status</label>
+            <select class="form-control" id="status" name="status" required>
+              <option value="" disabled selected>Selecione o status</option>
+              <option value="Aprovado">Aprovado</option>
+              <option value="Reprovado">Reprovado</option>
+            </select>
+          </div>
+        </div>
+        <div class="mt-2">
+          <label for="infoRecebimento" class="form-label">Informações de Recebimento</label>
+          <textarea class="form-control" rows="3" id="infoRecebimento" name="infoRecebimento"></textarea>
+        </div>
+        <div class="text-center mt-3">
+          <button type="submit" class="btn btn-primary btn-custom me-2" id="submitButton">
+            <i class="fas fa-save me-2"></i>Gravar
+          </button>
+          <button type="button" class="btn btn-secondary btn-custom me-2" id="btnImprimir">
+            <i class="fas fa-print me-2"></i>Imprimir
+          </button>
+          <button type="button" class="btn btn-danger btn-custom" id="btnSair">
+            <i class="fas fa-sign-out-alt me-2"></i>Sair
+          </button>
+        </div>
+      </div>
   </div>
 
-  <div class="card-custom mb-3">
-    <div class="card-header">2. Teste Laboratório</div>
-    <div class="row mt-2">
-      <div class="col-md-4 mt-2">
-        <label for="cvm" class="form-label">CVM (%)</label>
-        <input type="number" step="0.01" class="form-control" id="cvm" name="cvm" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="pontosFinos" class="form-label">Pontos Finos</label>
-        <input type="number" class="form-control" id="pontosFinos" name="pontosFinos" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="pontosGrossos" class="form-label">Pontos Grossos</label>
-        <input type="number" class="form-control" id="pontosGrossos" name="pontosGrossos" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="neps" class="form-label">NEPs</label>
-        <input type="number" class="form-control" id="neps" name="neps" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="hPilosidade" class="form-label">H. Pilosidade</label>
-        <input type="number" step="0.01" class="form-control" id="hPilosidade" name="hPilosidade" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="resistencia" class="form-label">Resistência</label>
-        <input type="number" step="0.01" class="form-control" id="resistencia" name="resistencia" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="alongamento" class="form-label">Alongamento</label>
-        <input type="number" step="0.01" class="form-control" id="alongamento" name="alongamento" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="tituloNe" class="form-label">Título, ne</label>
-        <input type="number" step="0.01" class="form-control" id="tituloNe" name="tituloNe" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="torcaoTm" class="form-label">Torção, t.m</label>
-        <input type="number" step="0.01" class="form-control" id="torcaoTm" name="torcaoTm" required>
-      </div>
-      <div class="col-md-4 mt-2">
-        <label for="status" class="form-label">Status</label>
-        <select class="form-control" id="status" name="status" required>
-          <option value="" disabled selected>Selecione o status</option>
-          <option value="Aprovado">Aprovado</option>
-          <option value="Reprovado">Reprovado</option>
-        </select>
-      </div> <!--
-          <div class="col-md-4 mt-2">
-            <label for="liberacaoPor" class="form-label">Liberação por</label>
-            <input type="text" class="form-control" id="liberacaoPor" name="liberacaoPor" required>
-          </div>
-          -->
-    </div>
-    <div class="mt-2">
-      <label for="infoRecebimento" class="form-label">Informações de Recebimento</label>
-      <textarea class="form-control" rows="3" id="infoRecebimento" name="infoRecebimento"></textarea>
-    </div>
-    <div class="text-center mt-3">
-      <button type="submit" class="btn btn-primary btn-custom me-2" id="submitButton">
-        <i class="fas fa-save me-2"></i>Gravar
-      </button>
-      <button type="button" class="btn btn-secondary btn-custom me-2" id="btnImprimir">
-        <i class="fas fa-print me-2"></i>Imprimir
-      </button>
-      <button type="button" class="btn btn-danger btn-custom" id="btnSair">
-        <i class="fas fa-sign-out-alt me-2"></i>Sair
-      </button>
-    </div>
-  </div>
   </form>
   </div>
   <!-- Modal de Alerta Global -->
@@ -205,15 +203,9 @@
           <button id="btnConfirmacaoSim" type="button" class="btn btn-primary">Sim</button>
           <button id="btnConfirmacaoNao" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
         </div>
-
       </div>
     </div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/fiberguardian_core.js"></script>
-  <script src="assets/js/fiberguardian_utils.js"></script>
-  <script src="assets/js/tela_cadastro_laboratorio.js"></script>
 </body>
 
 </html>
