Iniciando implementacao tela consulta Laudo Laboratorio

--- a/frontend/src/main/webapp/tela_cadastro_recebimento.html
+++ b/frontend/src/main/webapp/tela_cadastro_recebimento.html
@@ -20,7 +20,7 @@
 
     <!-- Etapa 1: Dados da Nota Fiscal -->
     <section class="card mb-4">
-      <h4 class="mb-2 mt-2 text-center titulo-cad-recebimento">CADASTRO DE NOTA FISCAL</h4>
+      <h4 class="mb-2 mt-2 text-center titulo-cad-recebimento">CONSULTA DE NOTAS FISCAIS</h4>
       <div class="card-header branco-bold">1. Dados da Nota Fiscal</div>
       <div class="card-body">
         <div class="row">
