--- a/frontend/src/main/webapp/tela_consulta_laboratorio.html
+++ b/frontend/src/main/webapp/tela_consulta_laboratorio.html
@@ -1,113 +1,198 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Consulta de Testes de Laboratório</title>
+  <title>Cadastro de Nota Fiscal por Item</title>
   <link rel="stylesheet" href="assets/css/normalize.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Bootstrap Bundle -->
+  <!-- Bootstrap Bundle (com Modal e Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/tela_consulta_laboratorio.css" />
+  <link rel="stylesheet" href="assets/css/tela_cadastro_recebimento.css" />
+  <link rel="stylesheet" href="assets/css/tela_consulta_recebimento.css" />
+
+  <link rel="stylesheet" href="assets/css/dropdown_generico.css" />
+
 </head>
 
 <body>
+
   <div class="container mt-4 mb-5">
 
     <section class="card mb-4">
-      <h4 class="mb-2 mt-2 text-center titulo-pesquisa">CONSULTA DE TESTES DE LABORATÓRIO</h4>
-      <div class="card-header">
+      <h4 class="mb-2 mt-2 text-center titulo-pesquisa">CONSULTA LAUDOS DE LABORATÓRIO</h4>
+      <div class="card-header branco-bold">
         <i class="fas fa-search me-2"></i>Filtros de Pesquisa
       </div>
       <div class="card-body">
-        <form id="formPesquisaLaboratorio">
-          <div class="row">
-            <!-- Primeira linha -->
+        <form id="formPesquisa">
+          <!-- Primeira linha: Data Inicial, Data Final, Fornecedor -->
+          <div class="row mb-3">
+            <!-- Data Inicial -->
             <div class="col-md-4 mb-3">
               <label for="dataInicial" class="form-label">Data Inicial</label>
               <input type="date" id="dataInicial" name="dataInicial" class="form-control" />
             </div>
 
+            <!-- Data Final -->
             <div class="col-md-4 mb-3">
               <label for="dataFinal" class="form-label">Data Final</label>
               <input type="date" id="dataFinal" name="dataFinal" class="form-control" />
             </div>
 
+            <!-- Fornecedor -->
             <div class="col-md-4 mb-3">
               <label for="fornecedor" class="form-label">Fornecedor</label>
               <div class="input-group">
                 <input type="text" id="fornecedor" name="fornecedor" class="form-control"
-                  placeholder="Digite parte do nome, clique em Buscar." autocomplete="off" />
-                <button id="btnBuscarFornecedor" class="btn btn-outline-secondary" type="button">
+                  placeholder="Digite parte do nome, clique botão Buscar." autocomplete="off" />
+                <button id="btnBuscarFornecedor" class="btn btn-outline-secondary" name="btnBuscarFornecedor"
+                  type="button">
                   <i class="fas fa-search me-2"></i>Buscar
                 </button>
-                <button id="btnTrocarFornecedor" class="btn btn-outline-danger" type="button" disabled>
+                <button id="btnTrocarFornecedor" class="btn btn-outline-danger" name="btnTrocarFornecedor" type="button"
+                  disabled>
                   <i class="fas fa-exchange-alt me-2"></i>Trocar
                 </button>
               </div>
-              <div id="dropdownFornecedor" class="dropdown-menu w-100"></div>
+              <div id="dropdownFornecedor" name="dropdownFornecedor" class="dropdown-menu w-100"
+                aria-labelledby="fornecedor"></div>
+            </div>
+          </div>
+
+          <!-- Segunda linha: Recebido Por, Nº Nota Fiscal, Status -->
+          <div class="row mb-3">
+            <!-- Recebido Por -->
+            <div class="col-md-4 mb-3">
+              <label for="recebidoPor" class="form-label">Recebido Por</label>
+              <div class="input-group">
+                <input type="text" id="recebidoPor" name="recebidoPor" class="form-control" autocomplete="off"
+                  placeholder="Digite parte do nome, clique botão Buscar." />
+                <button id="btnBuscarRecebidoPor" class="btn btn-outline-secondary" name="btnBuscarRecebidoPor"
+                  type="button">
+                  <i class="fas fa-exchange-alt me-2"></i>Buscar
+                </button>
+                <button id="btnTrocarRecebidoPor" class="btn btn-outline-danger" name="btnTrocarRecebidoPor"
+                  type="button" disabled>
+                  <i class="fas fa-search me-2"></i>Trocar
+                </button>
+              </div>
+              <div id="dropdownRecebidoPor" name="dropdownRecebidoPor" class="dropdown-menu w-100"
+                aria-labelledby="recebidoPor"></div>
             </div>
 
-            <!-- Segunda linha -->
+            <!-- Nº Nota Fiscal -->
             <div class="col-md-4 mb-3">
               <label for="nrNotaFiscal" class="form-label">Nº Nota Fiscal</label>
               <div class="input-group">
                 <input type="text" id="nrNotaFiscal" name="nrNotaFiscal" class="form-control"
                   placeholder="Digite o número da nota" autocomplete="off" />
-                <button id="btnBuscarNrNotaFiscal" class="btn btn-outline-secondary" type="button">
+                <button id="btnBuscarNrNotaFiscal" class="btn btn-outline-secondary" name="btnBuscarNrNotaFiscal"
+                  type="button">
                   <i class="fas fa-search me-2"></i>Buscar
                 </button>
               </div>
-              <div id="dropdownNrNotaFiscal" class="dropdown-menu w-100"></div>
+              <div id="dropdownNrNotaFiscal" name="dropdownNrNotaFiscal" class="dropdown-menu w-100"
+                aria-labelledby="nrNotaFiscal"></div>
             </div>
 
-            <!-- Espaço vazio para manter grid alinhado -->
-            <div class="col-md-4 mb-3"></div>
-            <div class="col-md-4 mb-3"></div>
-
-            <!-- Botões -->
-            <div class="text-center mt-4">
-              <button type="submit" class="btn btn-primary btn-custom">
-                <i class="fas fa-search me-2"></i>Pesquisar Testes
-              </button>
-              <button type="reset" class="btn btn-secondary btn-custom">
-                <i class="fas fa-eraser me-2"></i>Limpar Pesquisa
-              </button>
-              <button type="button" class="btn btn-danger btn-custom" id="btnSair">
-                <i class="fas fa-sign-out-alt me-2"></i>Sair
-              </button>
+            <!-- Status -->
+            <div class="col-md-4 mb-3">
+              <label for="status" class="form-label">Status</label>
+              <select class="form-control" id="status" name="status" required>
+                <option value="" disabled>Selecione o status</option>
+                <option value="APROVADO" selected>Aprovado</option>
+                <option value="REPROVADO">Reprovado</option>
+              </select>
             </div>
           </div>
+          <!-- Botões -->
+          <div class="text-center mt-4">
+            <button type="button" class="btn btn-primary btn-custom" id="btnConsultarLaudo" name="btnConsultarLaudo">
+              <i class="fas fa-search me-2"></i>Consultar Laudos
+            </button>
+            <button type="button" class="btn btn-secondary btn-custom" id="btnLimpar" name="btnLimpar">
+              <i class="fas fa-eraser me-2"></i>Limpar Pesquisa
+            </button>
+            <button type="button" class="btn btn-danger btn-custom" id="btnSair" name="btSair">
+              <i class="fas fa-sign-out-alt me-2"></i>Sair
+            </button>
+          </div>
+
         </form>
-
-        <!-- Tabela Dinâmica (mantida igual ao seu arquivo original) -->
-        <div class="mt-4 table-container" id="resultadosContainer" style="display: none;">
-          <div class="card-header">Resultados da Consulta</div>
-          <div class="card-body">
-            <table class="table table-striped table-bordered text-center align-middle">
-              <thead class="table-dark">
-                <tr>
-                  <th>Data</th>
-                  <th>Fornecedor</th>
-                  <th>Código</th>
-                  <th>Status</th>
-                  <th>Ações</th>
-                </tr>
-              </thead>
-              <tbody id="resultadosTableBody">
-                <tr>
-                  <td colspan="5">Nenhum teste encontrado para a nota fiscal informada.</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <!-- Tabela Dinâmica -->
+        <div class="mt-4 table-container">
+          <table class="table table-bordered table-striped align-middle text-center">
+            <thead class="table-dark">
+              <tr>
+                <th>Nr. Nota Fiscal</th>
+                <th>CNPJ</th>
+                <th>Empresa</th>
+                <th>Cod. Produto</th>
+                <th>Descrição</th>
+                <th>Nr. Lote</th>
+                <th>Laudo emitido por</th>
+                <th>Data Emissão</th>
+                <th>Observações</th>
+                <th>Status</th>
+                <th>Ações</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
+        <div id="paginacao-container" class="d-flex justify-content-center mt-3"></div>
       </div>
     </section>
   </div>
+  </div>
+  </div>
 
-  <script src="../webapp/assets/js/fiberguardian_core.js"></script>
-  <script src="../webapp/assets/js/tela_consulta_laboratorio.js"></script>
+  <!-- Modal de Alerta Global -->
+  <div class="modal fade" id="modalMensagemSistema" name="modalMensagemSistema" tabindex="-1"
+    aria-labelledby="modalMensagemSistemaTitulo" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header bg-warning text-dark">
+          <h5 class="modal-title" id="modalMensagemSistemaTitulo" name="modalMensagemSistemaTitulo">Aviso</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+        <div class="modal-body text-pre-wrap">
+          <!-- Conteúdo da mensagem será inserido via JS -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal de Confirmação Genérico -->
+  <div class="modal fade" id="modalConfirmacaoGenerico" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalConfirmacaoTitulo">Confirmação</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+
+        <div class="modal-body" id="modalConfirmacaoMensagem">
+          <!-- Mensagem será preenchida dinamicamente -->
+        </div>
+
+        <div class="modal-footer">
+          <button id="btnConfirmacaoSim" type="button" class="btn btn-primary">Sim</button>
+          <button id="btnConfirmacaoNao" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
 </body>
+
 </html>
